feat - Selectable font in GitHub desktop

--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -12,7 +12,7 @@
   color: var(--diff-text-color);
   background: var(--background-color);
   font-size: var(--font-size-sm);
-  font-family: var(--font-family-monospace);
+  //font-family: var(--font-family-monospace);
 
   span {
     // Force word breaks. This only matters when soft wrapping is on.
