--- a/app/styles/ui/_side-by-side-diff.scss
+++ b/app/styles/ui/_side-by-side-diff.scss
@@ -47,7 +47,7 @@
     flex-grow: 1;
     height: 100%;
     width: 100%;
-    font-family: var(--font-family-monospace);
+    //font-family: var(--font-family-monospace);
     font-size: var(--font-size-sm);
     color: var(--diff-text-color);
     background: var(--background-color);
